Fixed a minor layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,10 @@ body {
   margin-bottom: 0.75rem;
 }
 
+.testimonials__list-item:last-of-type {
+  margin-bottom: 0;
+}
+
 .testimonials__list-item > span {
   position: relative;
   top: -7px;
